[tool.poetry]
name = "build_elevation"
version = "0.1.0"
description = ""
authors = ["Christian <christian@gisops.com>"]

[tool.poetry.scripts]
build_elevation = 'build_elevation.main:main'

[tool.poetry.dependencies]
python = "^3.9"
Shapely = "^1.7.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
